# grpc-tonik-wasm-example

client/: Cargo.toml  build.rs
client/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
