[package]
name = "client"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tonic = { version = "0.5", default-features = false, features = ["prost", "codegen"] }
prost = { version = "0.8", default-features = false }
grpc-web-client = {git = "https://github.com/titanous/grpc-web-client" }
js-sys = { version = "0.3", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = "1"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]


[build-dependencies]
tonic-build = {version = "0.5", default-features = false, features = ["prost"]}